--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.1.10",
     "react": "^18.2.0",
-    "react-barcodes": "^1.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-select-search": "^3.0.10"
   },
   "devDependencies": {
