--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "gb": "npx generate-react-cli component --type=button"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.1.10",
     "react": "^18.2.0",
